<resources>
    <string name="app_name">EnWords</string>
    <string name="enwords">EnWords</string>
    <string name="start">Start</string>
    <string name="button1">Button</string>
    <string name="category1">Shopping</string>
    <string name="category2">Verbs</string>
    <string name="category3">Phrases</string>
    <string name="category4">Food</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="button">Button</string>
    <string name="back">Back</string>
    <string name="points">points</string>
    <string name="translation">Translation</string>
</resources>