<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/category1"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:onClick="onButtonClickCategory1"
        android:text="@string/category1"
        app:layout_constraintBottom_toTopOf="@+id/category2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/category3"
        android:layout_width="121dp"
        android:layout_height="49dp"
        android:onClick="onButtonClickCategory3"
        android:text="@string/category3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/category2"
        android:layout_width="121dp"
        android:layout_height="51dp"
        android:onClick="onButtonClickCategory2"
        android:text="@string/category2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/category1"
        app:layout_constraintStart_toStartOf="@+id/category1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/category4"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:onClick="onButtonClickCategory4"
        android:text="@string/category4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="category1,category2,category4,category3"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>