<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClickBack"
        android:text="@string/back"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translation"
        app:layout_constraintBottom_toTopOf="@+id/choose_butt_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <Button
        android:id="@+id/choose_butt_1"
        android:layout_width="409dp"
        android:layout_height="66dp"
        android:onClick="onButtonClickButton1"
        android:text="@string/button"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524"
        tools:ignore="DuplicateSpeakableTextCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/choose_butt_4"
        android:layout_width="409dp"
        android:layout_height="57dp"
        android:layout_marginBottom="48dp"
        android:onClick="onButtonClickButton4"
        android:text="@string/button"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/choose_butt_3"
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:onClick="onButtonClickButton3"
        android:text="@string/button"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/choose_butt_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_butt_2"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/choose_butt_2"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:onClick="onButtonClickButton2"
        android:text="@string/button"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/choose_butt_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_butt_1"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="choose_butt_3,choose_butt_1,choose_butt_2,choose_butt_4" />

</androidx.constraintlayout.widget.ConstraintLayout>